--- a/Example/HaidoraDesignable/Main.storyboard
+++ b/Example/HaidoraDesignable/Main.storyboard
@@ -67,8 +67,8 @@
         <!--Table View-->
         <scene sceneID="9M3-J9-WMU">
             <objects>
-                <tableViewController id="hqP-jY-Jja" customClass="NUIDemoTableViewController" sceneMemberID="viewController">
-                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="qcZ-yE-0Tm" customClass="HDTableView">
+                <tableViewController id="hqP-jY-Jja" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="qcZ-yE-0Tm">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
